--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,9 @@ framework:
     assets: ~
     php_errors:
         log: true
+    serializer:
+        enabled: true
+
 
 # Twig Configuration
 twig:
