--- a/src/AppBundle/Resources/config/doctrine/Comment.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Comment.orm.yml
@@ -12,13 +12,13 @@ AppBundle\Entity\Comment:
         user:
           targetEntity: User
           joinColumn:
-            name: id
+            name: user_id
             referencedColumnName: id
         post:
           targetEntity: Post
           inversedBy: comment
           joinColumn:
-            name: id
+            name: post_id
             referencedColumnName: id
     fields:
 
